# IMC-2023

./: .gitignore  .gitmodules  Makefile  README.md  eval.py  hloc_reconstruction.py  imc2023-ds-from-repo.ipynb  imc2023-from-repo.ipynb  install_pip.sh  install_wheels.sh  interactive.sh  interactive_session.sh  main.py  pipeline-pixsfm-loftr.py  requirements.txt  run_baseline.py  run_pixsfm.py  setup.cfg  setup.py  sjob.sbatch  startup.sh
archive/: pipeline-pixsfm-loftr.py  run_baseline.py
baselines/: baseline-loftr.py  baseline-pixsfm.py  baseline-sift.py  baseline-super.py
ext_deps/dioad/: README.md  requirements.txt  setup.cfg  setup.py
ext_deps/dioad/dioad/: infer.py  models.py  processing.py
ext_deps/torch-dimcheck/: README.md
ext_deps/unets/: setup.py
imc2023/: configs.py  cropping.py  preprocessing.py
imc2023/pipelines/: dense_pipeline.py  pipeline.py  sparse_pipeline.py
notebooks/: Compare_features_matches.ipynb  Localization.ipynb  compare_runs.ipynb  concat_matches.ipynb  explore_matches.ipynb  geometric_verification.ipynb  keypoint_rotation_test.ipynb  presentation-plots.ipynb  scale_experiment.ipynb  test_PGO.ipynb  visualize_sfm.ipynb
wheels/: PyYAML-6.0-cp39-cp39-macosx_11_0_arm64.whl  antlr4_python3_runtime-4.9.3-py3-none-any.whl  dioad-0.0.0-py3-none-any.whl  dioad-0.0.2-py3-none-any.whl  dioad-1.0.0-py3-none-any.whl  einops-0.6.1-py3-none-any.whl  hloc-1.3-py3-none-any.whl  pixsfm-0.0.1-cp38-cp38-linux_x86_64.whl  torch_dimcheck-0.0.1-py3-none-any.whl  torch_localize-0.1.0-py3-none-any.whl  unets-0.2.0-py3-none-any.whl
(+24 files in other folders)
