[metadata]
name = imc2023
version = 0.0.0
description = imc2023h package.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.9


[options]
include_package_data = True
packages = find:
install_requires =
	numpy
	matplotlib

[options.packages.find]
include = imc2023*
