[metadata]
name = dioad
version = 0.0.2
description = dioad package.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.10


[options]
include_package_data = True
packages = find:
install_requires =
	numpy
	matplotlib


[options.packages.find]
include = dioad*